V1.4:修复了一些BUG